# compilers

./: .gitignore  README.md  cerrors.py  compiler.py  conftest.py  lexer.py  lexer_errors.py  parser.py  program.py  pylintrc  pyproject.toml  test_conftest.py  test_lexer.py  test_parser.py  tokens.py
Fylang/: .gitignore  Directory.Packages.props  Fylang.sln
Fylang/Fylang/: Fylang.fsproj  Lexer.fs  Typing.fs
Fylang/Fylang.Tests/: Fylang.Tests.fsproj  Tests.fs
c/: ccompiler.py  helpers.py  lexer_test.py  lexer_tests.py  tokens.py  tokens_test.py
c/stage_1/: multi_digit.tokens  simple01.tokens
minpairs/: minpairs.md
test-programs/chapter-01/invalid/: missing_paren.c
test-programs/chapter-01/valid/: multi_digit.asm  multi_digit.ast  multi_digit.tokens  newlines.tokens  no_newlines.tokens  return_0.tokens  return_2.asm  return_2.tokens  spaces.tokens  tabs.tokens
test-programs/chapter-02/valid/: bitwise.tokens  bitwise_int_min.tokens  bitwise_zero.tokens  neg.tokens  neg_zero.tokens  negate_int_max.tokens  nested_ops.tokens  nested_ops_2.tokens  parens.tokens  parens_2.tokens  parens_3.tokens  redundant_parens.tokens
tests/: test_compiler.py  test_lexer.py  test_parser.py  test_tokens.py
