[project]
name = "interview-pyqs"
version = "0.1.0"
description = "Python takes on standard interview questions."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Joshua Rakita", email = "joraki@microsoft.com" },
]
keywords = ["python", "uv", "example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "regex"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
# Set the maximum line length, similar to Black's default.
line-length = 110

[tool.black]
line-length = 110